# cross-border-dashboard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  TECH_DEBT.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: README.md
config/: config.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  CONFIG_DESIGN.md  DEVELOPMENT.md
docs/decisions/: ADR-001-config.md  ADR-002-pipeline.md  ADR-003-exceptions.md  ADR-004-testing.md
src/: customer_analyzer.py  data_cleaner.py  data_loader.py  data_profiler.py  report_generator.py  sales_analyzer.py  visualizer.py
src/config/: __init__.py  config.py  loader.py
src/exceptions/: __init__.py  exceptions.py
src/logger/: __init__.py  logger.py
src/models/: __init__.py  customer_result.py  models.py  pipeline_result.py  sales_result.py
src/pipeline/: __init__.py  pipeline.py
src/ui/: __init__.py  about.py  analysis.py  charts.py  components.py  report.py  upload.py
tests/: conftest.py  test_data_cleaner.py  test_data_loader.py  test_sales_analyzer.py
